err/emq-celery.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/emq'...
Listing './lib/python3.5/site-packages/emq/client'...
Compiling './lib/python3.5/site-packages/emq/client/clientfactory.py'...
***   File "./lib/python3.5/site-packages/emq/client/clientfactory.py", line 67
    except GalaxyEmqServiceException, ex:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emq/common'...
Compiling './lib/python3.5/site-packages/emq/common/EMQBaseService.py'...
***   File "./lib/python3.5/site-packages/emq/common/EMQBaseService.py", line 143
    except GalaxyEmqServiceException, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emq/message'...
Compiling './lib/python3.5/site-packages/emq/message/MessageService.py'...
***   File "./lib/python3.5/site-packages/emq/message/MessageService.py", line 472
    except emq.common.ttypes.GalaxyEmqServiceException, e:
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emq/queue'...
Compiling './lib/python3.5/site-packages/emq/queue/QueueService.py'...
***   File "./lib/python3.5/site-packages/emq/queue/QueueService.py", line 1117
    except emq.common.ttypes.GalaxyEmqServiceException, e:
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emq/range'...
Listing './lib/python3.5/site-packages/emq/statistics'...
Compiling './lib/python3.5/site-packages/emq/statistics/StatisticsService.py'...
***   File "./lib/python3.5/site-packages/emq/statistics/StatisticsService.py", line 515
    except emq.common.ttypes.GalaxyEmqServiceException, e:
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emq_celery'...
Compiling './lib/python3.5/site-packages/emq_celery/producer.py'...
***   File "./lib/python3.5/site-packages/emq_celery/producer.py", line 62
    except TApplicationException, ex:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emq_celery/transport.py'...
***   File "./lib/python3.5/site-packages/emq_celery/transport.py", line 158
    print u'Purge Queue[' + queue + ']'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/emq_celery-3.0.6.egg-info'...
Listing './lib/python3.5/site-packages/emr'...
Listing './lib/python3.5/site-packages/emr/client'...
Compiling './lib/python3.5/site-packages/emr/client/clientfactory.py'...
***   File "./lib/python3.5/site-packages/emr/client/clientfactory.py", line 65
    except GalaxyEmrServiceException, ex:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emr/exceptions'...
Listing './lib/python3.5/site-packages/emr/service'...
Compiling './lib/python3.5/site-packages/emr/service/EMRSchedulerService.py'...
***   File "./lib/python3.5/site-packages/emr/service/EMRSchedulerService.py", line 381
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/galaxy'...
Listing './lib/python3.5/site-packages/galaxy/common'...
Compiling './lib/python3.5/site-packages/galaxy/common/httpclient.py'...
***   File "./lib/python3.5/site-packages/galaxy/common/httpclient.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/galaxy_sdk_python-1.2.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rpc'...
Listing './lib/python3.5/site-packages/rpc/auth'...
Compiling './lib/python3.5/site-packages/rpc/auth/AuthService.py'...
***   File "./lib/python3.5/site-packages/rpc/auth/AuthService.py", line 112
    except rpc.errors.ttypes.ServiceException, se:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpc/authorization'...
Listing './lib/python3.5/site-packages/rpc/common'...
Compiling './lib/python3.5/site-packages/rpc/common/BaseService.py'...
***   File "./lib/python3.5/site-packages/rpc/common/BaseService.py", line 181
    except rpc.errors.ttypes.ServiceException, se:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpc/errors'...
Listing './lib/python3.5/site-packages/sds'...
Listing './lib/python3.5/site-packages/sds/admin'...
Compiling './lib/python3.5/site-packages/sds/admin/AdminService.py'...
***   File "./lib/python3.5/site-packages/sds/admin/AdminService.py", line 1966
    except sds.errors.ttypes.ServiceException, se:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sds/auth'...
Compiling './lib/python3.5/site-packages/sds/auth/AuthService.py'...
***   File "./lib/python3.5/site-packages/sds/auth/AuthService.py", line 106
    except sds.errors.ttypes.ServiceException, se:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sds/client'...
Compiling './lib/python3.5/site-packages/sds/client/clientfactory.py'...
***   File "./lib/python3.5/site-packages/sds/client/clientfactory.py", line 92
    except SdsTransportException, ex:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sds/common'...
Compiling './lib/python3.5/site-packages/sds/common/BaseService.py'...
***   File "./lib/python3.5/site-packages/sds/common/BaseService.py", line 181
    except sds.errors.ttypes.ServiceException, se:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sds/errors'...
Listing './lib/python3.5/site-packages/sds/io'...
Listing './lib/python3.5/site-packages/sds/metrics'...
Listing './lib/python3.5/site-packages/sds/table'...
Compiling './lib/python3.5/site-packages/sds/table/TableService.py'...
***   File "./lib/python3.5/site-packages/sds/table/TableService.py", line 476
    except sds.errors.ttypes.ServiceException, se:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Compiling './lib/python3.5/site-packages/thrift/protocol/TJSONProtocol.py'...
***   File "./lib/python3.5/site-packages/thrift/protocol/TJSONProtocol.py", line 229
    character = json.JSONDecoder().decode('"\u00%s"' % self.trans.read(2))
                                         ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 1-4: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/thrift/server'...
Compiling './lib/python3.5/site-packages/thrift/server/THttpServer.py'...
***   File "./lib/python3.5/site-packages/thrift/server/THttpServer.py", line 76
    except ResponseException, exn:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/thrift/server/TProcessPoolServer.py'...
***   File "./lib/python3.5/site-packages/thrift/server/TProcessPoolServer.py", line 66
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/thrift/server/TServer.py'...
***   File "./lib/python3.5/site-packages/thrift/server/TServer.py", line 89
    except TTransport.TTransportException, tx:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/thrift/transport'...
Compiling './lib/python3.5/site-packages/thrift/transport/TSSLSocket.py'...
***   File "./lib/python3.5/site-packages/thrift/transport/TSSLSocket.py", line 99
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/thrift/transport/TSocket.py'...
***   File "./lib/python3.5/site-packages/thrift/transport/TSocket.py", line 89
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vision'...
Compiling './lib/python3.5/site-packages/vision/visionclient.py'...
***   File "./lib/python3.5/site-packages/vision/visionclient.py", line 106
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
